<resources>
    <string name="app_name">Movies</string>
    <string name="api_key">43a2d89b</string>
    <string name="search_hint">Search for Movie Titles</string>
    <string name="no_results">Sorry, no results for this search!</string>
    <string name="fav_movies">Favorite Movies</string>

    <string name="genre">Genre</string>
    <string name="year">Year</string>
    <string name="language">Language</string>
    <string name="rating">Rating</string>
    <string name="generic_error">Something is not right!!</string>
    <string name="add_favorites">Your favorite movies show up here</string>
    <string name="search_placeholder">Your search results show up here</string>
</resources>